--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/portfolio/node_modules
-/portfolio/.pnp
+/frontend/node_modules
+/frontend/.pnp
 .pnp.js
 
 # testing
-/portfolio/coverage
-/portfolio/src/.env
+/frontend/coverage
+/frontend/src/.env
 # production
-/portfolio/build
+/frontend/build
 
 /backend/.env
 /backend/node_modules
