--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-tilt": "^1.0.2",
+    "react-toastify": "^11.0.5",
     "react-vertical-timeline-component": "^3.6.0",
     "stream-browserify": "^3.0.0",
     "styled-components": "^6.1.12",
